--- a/sfui.scss
+++ b/sfui.scss
@@ -4,3 +4,5 @@
 // $button-desktop-padding: 5px !default;
 // global override including scoped componentss
 // $button-desktop-padding: 50px;
+
+$hero-item-height--desktop: 40rem;
