change Hero and scss

--- a/hdui.scss
+++ b/hdui.scss
@@ -1,4 +1,2 @@
-$breakpoint-mobile-landscape: 480px;
-$breakpoint-tablet-portrait: 768px;
-$breakpoint-tablet-landscape: 992px;
-$breakpoint-laptops: 1200px;
+@import 'sass/mixins';
+@import 'sass/variables'
