add colors as variables

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,13 @@
+// Breakpoints
+
 $breakpoint-mobile-landscape: 480px;
 $breakpoint-tablet-portrait: 768px;
 $breakpoint-tablet-landscape: 992px;
 $breakpoint-laptops: 1200px;
+
+// Colors
+$white: #ffffff;
+$yellow: #ffe904;
+$turquoise: #10cfc9;
+$brown: #99572e;
+$black: #000000;
