--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,5 +1,4 @@
 // Breakpoints
-
 $breakpoint-mobile-landscape: 480px;
 $breakpoint-tablet-portrait: 768px;
 $breakpoint-tablet-landscape: 992px;
@@ -11,3 +10,6 @@ $yellow: #ffe904;
 $turquoise: #10cfc9;
 $brown: #99572e;
 $black: #000000;
+
+// sizes
+$whitespace-margin: 60px;
