--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -16,3 +16,5 @@ $whitespace-margin: 60px;
 $tilerow-margin: 2.5px;
 $footer-top-margin: 100px;
 $column-margin: 10px;
+$batch-padding: 0 10px;
+$batch-margin-right: 5px;
