add padding to mixin clip-bottom

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,4 +1,5 @@
 @mixin clip-border {
   -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% calc(100% - 5vw), 0 100%);
   clip-path: polygon(0% 0%, 100% 0%, 100% calc(100% - 5vw), 0 100%);
+  padding-bottom: 5vw;
 }
