--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -18,3 +18,5 @@ $footer-top-margin: 100px;
 $column-margin: 10px;
 $batch-padding: 0 10px;
 $batch-margin-right: 5px;
+$koafilterbutton-margin-right: 50px;
+$koafilterbutton-margin-bottom: 10px;
