--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,7 +2,7 @@
 $breakpoint-mobile-landscape: 480px;
 $breakpoint-tablet-portrait: 768px;
 $breakpoint-tablet-landscape: 992px;
-$breakpoint-laptops: 1200px;
+$breakpoint-laptop: 1200px;
 
 // Colors
 $white: #ffffff;
