add paddingRight to Column

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -16,6 +16,7 @@ $whitespace-margin: 60px;
 $tilerow-margin: 2.5px;
 $footer-top-margin: 100px;
 $column-margin: 10px;
+$column-padding-right: 70px;
 $batch-padding: 0 10px;
 $batch-margin-right: 5px;
 $koafilterbutton-margin-right: 50px;
