--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -21,3 +21,4 @@ $batch-padding: 0 10px;
 $batch-margin-right: 5px;
 $koafilterbutton-margin-right: 50px;
 $koafilterbutton-margin-bottom: 10px;
+$ammount-selector-button-padding: 12px;
