make OfferBanner more responsive

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -22,3 +22,5 @@ $batch-margin-right: 5px;
 $koafilterbutton-margin-right: 50px;
 $koafilterbutton-margin-bottom: 10px;
 $ammount-selector-button-padding: 12px;
+$offerbanner-padding: 16px;
+$offerbanner-padding-right: 64px;
