--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -24,3 +24,5 @@ $koafilterbutton-margin-bottom: 10px;
 $ammount-selector-button-padding: 12px;
 $offerbanner-padding: 16px;
 $offerbanner-padding-right: 64px;
+$textinput-height: 57px;
+$textinput-padding: 4px;
