add TextareaInput, change CSS of TextInput

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -25,4 +25,9 @@ $ammount-selector-button-padding: 12px;
 $offerbanner-padding: 16px;
 $offerbanner-padding-right: 64px;
 $textinput-height: 57px;
-$textinput-padding: 4px;
+$textinput-padding: 14px;
+$textinput-font-size: 15px;
+$textareainput-height: 114px;
+$textareainput-padding: 14px;
+$textareainput-font-size: 15px;
+$textareainput-line-height: 1.67;
