--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -31,3 +31,9 @@ $textareainput-height: 114px;
 $textareainput-padding: 14px;
 $textareainput-font-size: 15px;
 $textareainput-line-height: 1.67;
+$dropdownInput-height: 34px;
+$dropdownInput-padding: 7px 10px;
+$dropdownInput-font-size: 15px;
+$dropdownInput-border-radius: 0;
+$dropdownInput-background-color: #10cfc9;
+$dropdownInput-color: $black;
