--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -37,3 +37,5 @@ $dropdownInput-font-size: 15px;
 $dropdownInput-border-radius: 0;
 $dropdownInput-background-color: #10cfc9;
 $dropdownInput-color: $black;
+$icon-width: 18px;
+$icon-height: 18px;
