--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -39,3 +39,6 @@ $dropdownInput-background-color: #10cfc9;
 $dropdownInput-color: $black;
 $icon-width: 18px;
 $icon-height: 18px;
+$iconButton-width: 48px;
+$iconButton-height: 48px;
+$iconButton-padding: (48-$icon-height)/2;
