--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -42,3 +42,8 @@ $icon-height: 18px;
 $iconButton-width: 48px;
 $iconButton-height: 48px;
 $iconButton-padding: (48-$icon-height)/2;
+$iconButton-batch-height: 24px;
+$iconButton-batch-padding: 0 2px;
+$iconButton-batch-border-radius: 12px;
+$iconButton-batch-background-color: #10cfc9;
+$iconButton-batch-color: $white;
