change TestInput font family

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -25,8 +25,10 @@ $ammount-selector-button-padding: 12px;
 $offerbanner-padding: 16px;
 $offerbanner-padding-right: 64px;
 $textinput-height: 57px;
-$textinput-padding: 14px;
-$textinput-font-size: 15px;
+$textinput-padding: 14px 8px;
+$textinput-font-size: 20px;
+$textinput-font-family: Poets;
+$textinput-caret-color: $turquoise;
 $textareainput-height: 114px;
 $textareainput-padding: 14px;
 $textareainput-font-size: 15px;
