add dark option to Icon and IconButton

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -37,7 +37,7 @@ $dropdownInput-height: 34px;
 $dropdownInput-padding: 7px 10px;
 $dropdownInput-font-size: 15px;
 $dropdownInput-border-radius: 0;
-$dropdownInput-background-color: #10cfc9;
+$dropdownInput-background-color: $turquoise;
 $dropdownInput-color: $black;
 $icon-width: 18px;
 $icon-height: 18px;
@@ -47,5 +47,6 @@ $iconButton-padding: (48-$icon-height)/2;
 $iconButton-batch-height: 24px;
 $iconButton-batch-padding: 0 2px;
 $iconButton-batch-border-radius: 12px;
-$iconButton-batch-background-color: #10cfc9;
+$iconButton-batch-background-color: $turquoise;
+$iconButton-batch-dark-background-color: $yellow;
 $iconButton-batch-color: $white;
