add global transition all 0.3s

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -17,6 +17,7 @@ body {
   font-family: Futura;
   font-size: 15px;
   line-height: 25px;
+  transition: all 0.3s;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Poets;
