make Icons dark reactive

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -48,5 +48,6 @@ $iconButton-batch-height: 24px;
 $iconButton-batch-padding: 0 2px;
 $iconButton-batch-border-radius: 12px;
 $iconButton-batch-background-color: $turquoise;
-$iconButton-batch-dark-background-color: $yellow;
 $iconButton-batch-color: $white;
+$iconButton-dark-batch-background-color: $yellow;
+$iconButton-dark-batch-color: $black;
