--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -21,6 +21,8 @@ $batch-padding: 0 10px;
 $batch-margin-right: 5px;
 $koafilterbutton-margin-right: 50px;
 $koafilterbutton-margin-bottom: 10px;
+$button4-margin-right: 50px;
+$button4-margin-bottom: 10px;
 $ammount-selector-button-padding: 12px;
 $offerbanner-padding: 16px;
 $offerbanner-padding-right: 64px;
