--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -51,6 +51,9 @@ a:hover, a:focus {
     margin-bottom: 30px !important;
   }
 }
+.center {
+  text-align: center;
+}
 
 /* From Zeplin */
 
@@ -62,7 +65,6 @@ a:hover, a:focus {
   font-style: normal;
   line-height: normal;
   letter-spacing: 1px;
-  text-align: left;
 }
 
 .hausschrift-32pt {
