--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -30,6 +30,13 @@ $textinput-padding: 14px 8px;
 $textinput-font-size: 20px;
 $textinput-font-family: Poets;
 $textinput-caret-color: $turquoise;
+$textinput2-height: 57px;
+$textinput2-padding: 14px 8px;
+$textinput2-font-size: 20px;
+$textinput2-font-family: Poets;
+$textinput2-limited-max-width: 335px;
+$textinput2-background-color: #f2f2f2;
+$textinput2-caret-color: $turquoise;
 $textareainput-height: 114px;
 $textareainput-padding: 14px;
 $textareainput-font-size: 15px;
