add margin-bottom to TextInput2

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -37,6 +37,7 @@ $textinput2-font-family: Poets;
 $textinput2-limited-max-width: 335px;
 $textinput2-background-color: #f2f2f2;
 $textinput2-caret-color: $turquoise;
+$textinput2-margin-bottom: 30px;
 $textareainput-height: 114px;
 $textareainput-padding: 14px;
 $textareainput-font-size: 15px;
