--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -38,6 +38,14 @@ $textinput2-limited-max-width: 335px;
 $textinput2-background-color: #f2f2f2;
 $textinput2-caret-color: $turquoise;
 $textinput2-margin-bottom: 30px;
+$textinput3-height: 57px;
+$textinput3-padding: 14px 8px;
+$textinput3-font-size: 20px;
+$textinput3-font-family: Poets;
+$textinput3-limited-max-width: 335px;
+$textinput3-background-color: #f2f2f2;
+$textinput3-caret-color: $turquoise;
+$textinput3-margin-bottom: 30px;
 $textareainput-height: 114px;
 $textareainput-padding: 14px;
 $textareainput-font-size: 15px;
