add dots to TextInput3 Border

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -43,7 +43,7 @@ $textinput3-padding: 14px 8px;
 $textinput3-font-size: 20px;
 $textinput3-font-family: Poets;
 $textinput3-limited-max-width: 335px;
-$textinput3-background-color: #f2f2f2;
+$textinput3-background-color: $white;
 $textinput3-caret-color: $turquoise;
 $textinput3-margin-bottom: 30px;
 $textareainput-height: 114px;
