--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -10,6 +10,7 @@ $yellow: #ffe904;
 $turquoise: #10cfc9;
 $brown: #99572e;
 $black: #000000;
+$gray: lighten($black, 75%);
 
 // sizes
 $whitespace-margin: 60px;
@@ -56,6 +57,10 @@ $dropdownInput-font-size: 15px;
 $dropdownInput-border-radius: 0;
 $dropdownInput-background-color: $turquoise;
 $dropdownInput-color: $black;
+$checkboxInput-height: 34px;
+$checkboxInput-width: 34px;
+$checkboxInput-background-color: $gray;
+$checkboxInput-color: $black;
 $icon-width: 18px;
 $icon-height: 18px;
 $iconButton-width: 48px;
