--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -73,4 +73,4 @@ $iconButton-batch-background-color: $turquoise;
 $iconButton-batch-color: $white;
 $iconButton-dark-batch-background-color: $yellow;
 $iconButton-dark-batch-color: $black;
-$koabutton-margin-bottom: 30px;
+$button1-margin-bottom: 30px;
