--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -20,8 +20,8 @@ $column-margin: 10px;
 $column-padding-right: 70px;
 $batch-padding: 0 10px;
 $batch-margin-right: 5px;
-$koafilterbutton-margin-right: 50px;
-$koafilterbutton-margin-bottom: 10px;
+$button2-margin-right: 50px;
+$button2-margin-bottom: 10px;
 $button4-margin: 2.5px;
 $ammount-selector-button-padding: 12px;
 $offerbanner-padding: 16px;
